ACLOCAL_AMFLAGS= -I m4

AM_CFLAGS = -I$(top_srcdir)/include -Wimplicit-function-declaration -Wformat

lib_LTLIBRARIES = libgloss-g3dimport.la
libgloss_g3dimport_la_SOURCES = $(LIBGLOSSG3DIMPORT_C_FILES)

LIBGLOSSG3DIMPORT_C_FILES = v2/g3dimportapp.c \
                            v2/g3dimportbone.c \
                            v2/g3dimport.c \
                            v2/g3dimportcamera.c \
                            v2/g3dimportchannel.c \
                            v2/g3dimportlight.c \
                            v2/g3dimportmaterial.c \
                            v2/g3dimportmesh.c \
                            v2/g3dimportmodifiers.c \
                            v2/g3dimportuvmap.c \
                            v2/g3dimportobject.c \
                            v2/g3dimportprimitive.c \
                            v2/g3dimportscene.c \
                            v2/g3dimportsubdivider.c \
                            v2/g3dimportsymmetry.c \
                            v2/g3dimportspline.c \
                            v2/g3dimportsplinerevolver.c \
                            v2/g3dimporttext.c \
                            v2/g3dimportffd.c \
                            v2/g3dimportkey.c \
                            v2/g3dimportmorpher.c \
                            v2/g3dimportskin.c \
                            v2/g3dimportwireframe.c \
                            v2/g3dimportextension.c \
                            v3/g3dimportapp.c \
                            v3/g3dimportbone.c \
                            v3/g3dimport.c \
                            v3/g3dimportcamera.c \
                            v3/g3dimportchannel.c \
                            v3/g3dimportinstance.c \
                            v3/g3dimportlight.c \
                            v3/g3dimportmaterial.c \
                            v3/g3dimportmesh.c \
                            v3/g3dimportmodifiers.c \
                            v3/g3dimportuvmap.c \
                            v3/g3dimportobject.c \
                            v3/g3dimportprimitive.c \
                            v3/g3dimportscene.c \
                            v3/g3dimportsubdivider.c \
                            v3/g3dimportsymmetry.c \
                            v3/g3dimportspline.c \
                            v3/g3dimportsplinerevolver.c \
                            v3/g3dimporttext.c \
                            v3/g3dimportffd.c \
                            v3/g3dimportkey.c \
                            v3/g3dimporttag.c \
                            v3/g3dimportmorpher.c \
                            v3/g3dimportskin.c \
                            v3/g3dimportwireframe.c \
                            v3/g3dimportextension.c \
                            collada.c \
                            3ds.c \
                            obj.c \
                            # c4d.c

