ACLOCAL_AMFLAGS= -I m4

AM_CFLAGS = -I$(top_srcdir)/include -Wimplicit-function-declaration -Wformat

lib_LTLIBRARIES = libgloss-g3durmanager.la
libgloss_g3durmanager_la_SOURCES = $(LIBGLOSSG3DURMANAGER_C_FILES)

LIBGLOSSG3DURMANAGER_C_FILES = g3durmanager.c \
                               urmaddobject.c \
                               urmconvertprimitive.c \
                               urmdelselitems.c \
                               urmweldvertices.c \
                               urmmovepoint.c \
                               urmmovevertices.c \
                               urmmoveuvs.c \
                               urmextrudemesh.c \
                               urminvertnormal.c \
                               urmmoveobject.c \
                               urmSplitMesh.c \
                               urmRevertSpline.c \
                               urmObjectRemoveKeys.c \
                               urmRoundSplinePoint.c \
                               urmAddSplinePoint.c \
                               urmAddSplineSegment.c \
                               urmCutSpline.c \
                               urmObjectPose.c \
                               urmDeleteSplinePoints.c \
                               urmselectitem.c \
                               urmcutmesh.c \
                               urmuntriangulate.c \
                               urmcreateface.c \
                               urmaddvertex.c \
                               urmAddTexture.c \
                               urmRemoveTexture.c \
                               urmPaintImage.c \
                               urmAddUVMap.c \
                               urmMorpherMoveVertices.c \
                               urmRemoveUVMap.c \
                               urmAddMaterial.c \
                               urmRemoveMaterial.c \
                               urmCreateFacegroup.c
