ACLOCAL_AMFLAGS= -I m4

AM_CFLAGS = -I$(top_srcdir)/include -Wimplicit-function-declaration -Wformat

lib_LTLIBRARIES = libgloss-lips3d.la
libgloss_lips3d_la_SOURCES = $(LIBGLOSSLIPS3D_C_FILES)

LIBGLOSSLIPS3D_C_FILES = l3dbasepen.c \
                         l3dobject.c \
                         l3dselector.c \
                         l3dbucket.c \
                         l3dpattern.c \
                         l3dsysinfo.c \
                         l3dcore.c

